--- a/src/test/resources/res/values/strings.xml
+++ b/src/test/resources/res/values/strings.xml
@@ -20,4 +20,5 @@
   <string name="minute_singular">minute</string>
   <string name="minute_plural">minutes</string>
   <string name="str_int">123456</string>
+  <string name="preference_resource">preference_resource_key</string>
 </resources>
