--- a/src/test/resources/res/values/strings.xml
+++ b/src/test/resources/res/values/strings.xml
@@ -19,4 +19,5 @@
   <string name="activity_name">Testing App Activity</string>
   <string name="minute_singular">minute</string>
   <string name="minute_plural">minutes</string>
+  <string name="str_int">123456</string>
 </resources>
