Adds support for preference default value declared in XML.
Initializes preference default value from XML if available by
coercing the value to a String.

Closes #1069.

--- a/src/test/resources/res/values/strings.xml
+++ b/src/test/resources/res/values/strings.xml
@@ -26,4 +26,5 @@
   <string name="preference_resource_key">preference_resource_key_value</string>
   <string name="preference_resource_title">preference_resource_title_value</string>
   <string name="preference_resource_summary">preference_resource_summary_value</string>
+  <string name="preference_resource_default_value">preference_resource_default_value</string>
 </resources>
