Adding _item_ resource support. Fixes #1079
Android allows defining resource either by a class name, e.g.,
"<integer... />" or by item&type, e.g., "<item ... type='integer'../>"
This commit add support for the latter.

Change-Id: I4f02f56006165e208e6f808d6338c65abd26665c

--- a/src/test/resources/res/values/strings.xml
+++ b/src/test/resources/res/values/strings.xml
@@ -26,4 +26,5 @@
   <string name="preference_resource_key">preference_resource_key_value</string>
   <string name="preference_resource_title">preference_resource_title_value</string>
   <string name="preference_resource_summary">preference_resource_summary_value</string>
+  <item name="say_it_with_item" type="string">flowers</item>
 </resources>
