--- a/src/test/resources/res/values/strings.xml
+++ b/src/test/resources/res/values/strings.xml
@@ -27,5 +27,6 @@
   <string name="preference_resource_title">preference_resource_title_value</string>
   <string name="preference_resource_summary">preference_resource_summary_value</string>
   <string name="preference_resource_default_value">preference_resource_default_value</string>
+  <string name="test_menu_2">Test menu item 2</string>
   <item name="say_it_with_item" type="string">flowers</item>
 </resources>
