Resources.getIdentifier() should return an identifier if it is a valid resource, even if it doesn't exist in the R file. This could be the case if the value, not referenced from Java has been proguarded.
 The current implementation just checks the ResourceIndex which is only aware of the R file, not the actual resources.

--- a/robolectric/src/test/resources/res/values/strings.xml
+++ b/robolectric/src/test/resources/res/values/strings.xml
@@ -9,6 +9,7 @@
     <item>bar</item>
   </string-array>
   <string name="copy">Local Copy</string>
+  <string name="not_in_the_r_file">Proguarded Out Probably</string>
   <string name="only_in_main">from main</string>
   <string name="in_all_libs">from main</string>
   <string name="in_main_and_lib1">from main</string>
