--- a/robolectric/src/test/resources/res/values/strings.xml
+++ b/robolectric/src/test/resources/res/values/strings.xml
@@ -38,4 +38,6 @@
   <string name="preference_resource_default_value">preference_resource_default_value</string>
   <string name="test_menu_2">Test menu item 2</string>
   <item name="say_it_with_item" type="string">flowers</item>
+  <string name="typed_array_a">apple</string>
+  <string name="typed_array_b">banana</string>
 </resources>
